--- a/css/style.css
+++ b/css/style.css
@@ -608,19 +608,14 @@ body {
   margin-bottom: 2.5rem;
 }
 
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
 .my-3 {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .my-7 {
@@ -628,14 +623,24 @@ body {
   margin-bottom: 1.75rem;
 }
 
-.my-5 {
-  margin-top: 1.25rem;
-  margin-bottom: 1.25rem;
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+
+.my-16 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.my-5 {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
 }
 
 .mb-3 {
@@ -644,6 +649,10 @@ body {
 
 .mb-5 {
   margin-bottom: 1.25rem;
+}
+
+.mb-8 {
+  margin-bottom: 2rem;
 }
 
 .mb-\[35px\] {
@@ -658,12 +667,40 @@ body {
   margin-left: 1rem;
 }
 
+.mr-12 {
+  margin-right: 3rem;
+}
+
+.mr-2 {
+  margin-right: 0.5rem;
+}
+
+.mr-24 {
+  margin-right: 6rem;
+}
+
+.mr-44 {
+  margin-right: 11rem;
+}
+
+.mr-7 {
+  margin-right: 1.75rem;
+}
+
 .mt-10 {
   margin-top: 2.5rem;
 }
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mt-32 {
+  margin-top: 8rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mt-40 {
@@ -678,120 +715,40 @@ body {
   margin-top: 120px;
 }
 
-.mt-\[135px\] {
-  margin-top: 135px;
-}
-
-.mt-32 {
-  margin-top: 8rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
-.mr-4 {
-  margin-right: 1rem;
-}
-
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
-.mr-7 {
-  margin-right: 1.75rem;
-}
-
-.mt-3 {
-  margin-top: 0.75rem;
-}
-
-.mt-5 {
-  margin-top: 1.25rem;
-}
-
-.mt-4 {
-  margin-top: 1rem;
-}
-
-.mr-2 {
-  margin-right: 0.5rem;
-}
-
-.mb-7 {
-  margin-bottom: 1.75rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
-}
-
 .mb-10 {
   margin-bottom: 2.5rem;
 }
 
-.mb-8 {
-  margin-bottom: 2rem;
+.mb-12 {
+  margin-bottom: 3rem;
 }
 
-.ml-12 {
-  margin-left: 3rem;
+.mb-40 {
+  margin-bottom: 10rem;
 }
 
-.ml-1 {
-  margin-left: 0.25rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
-.ml-20 {
-  margin-left: 5rem;
+.mb-20 {
+  margin-bottom: 5rem;
 }
 
-.ml-24 {
-  margin-left: 6rem;
+.mb-2 {
+  margin-bottom: 0.5rem;
 }
 
-.ml-32 {
-  margin-left: 8rem;
+.mb-24 {
+  margin-bottom: 6rem;
 }
 
-.ml-40 {
-  margin-left: 10rem;
+.mb-11 {
+  margin-bottom: 2.75rem;
 }
 
-.mr-8 {
-  margin-right: 2rem;
-}
-
-.mr-14 {
-  margin-right: 3.5rem;
-}
-
-.mr-16 {
-  margin-right: 4rem;
-}
-
-.mr-20 {
-  margin-right: 5rem;
-}
-
-.mr-6 {
-  margin-right: 1.5rem;
-}
-
-.mr-10 {
-  margin-right: 2.5rem;
-}
-
-.mr-24 {
-  margin-right: 6rem;
-}
-
-.mr-12 {
-  margin-right: 3rem;
-}
-
-.mr-44 {
-  margin-right: 11rem;
+.block {
+  display: block;
 }
 
 .inline-block {
@@ -808,6 +765,10 @@ body {
 
 .hidden {
   display: none;
+}
+
+.h-8 {
+  height: 2rem;
 }
 
 .h-\[240px\] {
@@ -827,24 +788,40 @@ body {
   height: max-content;
 }
 
-.h-20 {
-  height: 5rem;
+.h-5 {
+  height: 1.25rem;
 }
 
-.h-4 {
-  height: 1rem;
+.h-10 {
+  height: 2.5rem;
 }
 
-.h-6 {
-  height: 1.5rem;
+.h-11 {
+  height: 2.75rem;
 }
 
-.h-8 {
-  height: 2rem;
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-12 {
+  height: 3rem;
+}
+
+.w-10 {
+  width: 2.5rem;
 }
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-7 {
+  width: 1.75rem;
+}
+
+.w-72 {
+  width: 18rem;
 }
 
 .w-8 {
@@ -867,14 +844,6 @@ body {
   width: 350px;
 }
 
-.w-\[50px\] {
-  width: 50px;
-}
-
-.w-\[55px\] {
-  width: 55px;
-}
-
 .w-\[7px\] {
   width: 7px;
 }
@@ -888,105 +857,97 @@ body {
   width: max-content;
 }
 
-.w-14 {
-  width: 3.5rem;
+.w-5 {
+  width: 1.25rem;
 }
 
-.w-20 {
-  width: 5rem;
+.w-44 {
+  width: 11rem;
 }
 
-.w-4 {
-  width: 1rem;
-}
-
-.w-64 {
-  width: 16rem;
+.w-52 {
+  width: 13rem;
 }
 
 .w-96 {
   width: 24rem;
 }
 
-.w-60 {
-  width: 15rem;
+.w-80 {
+  width: 20rem;
 }
 
-.w-72 {
-  width: 18rem;
+.w-\[\] {
+  width: ;
 }
 
-.w-9 {
-  width: 2.25rem;
+.w-\[392px\] {
+  width: 392px;
 }
 
-.w-10 {
-  width: 2.5rem;
+.w-\[3\] {
+  width: 3;
 }
 
-.w-1 {
-  width: 0.25rem;
+.w-\[416px\] {
+  width: 416px;
 }
 
-.w-11 {
-  width: 2.75rem;
+.w-\[4px\] {
+  width: 4px;
 }
 
-.w-7 {
-  width: 1.75rem;
+.w-\[448px\] {
+  width: 448px;
+}
+
+.w-\[480px\] {
+  width: 480px;
+}
+
+.w-\[512px\] {
+  width: 512px;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-\[6\] {
+  width: 6;
+}
+
+.w-\[630\] {
+  width: 630;
+}
+
+.w-\[640\] {
+  width: 640;
+}
+
+.w-\[640px\] {
+  width: 640px;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-36 {
+  width: 9rem;
 }
 
 .min-w-\[58px\] {
   min-width: 58px;
 }
 
-.min-w-max {
-  min-width: -moz-max-content;
-  min-width: max-content;
-}
-
-.min-w-\[5\] {
-  min-width: 5;
-}
-
-.min-w-\[5px\] {
-  min-width: 5px;
-}
-
-.min-w-\[5p8x\] {
-  min-width: 5p8x;
-}
-
-.min-w-\[100px\] {
-  min-width: 100px;
-}
-
-.min-w-\[124px\] {
-  min-width: 124px;
-}
-
-.min-w-\[1px\] {
-  min-width: 1px;
-}
-
 .min-w-\[82px\] {
   min-width: 82px;
 }
 
-.max-w-md {
-  max-width: 28rem;
-}
-
-.max-w-sm {
-  max-width: 24rem;
-}
-
-.max-w-lg {
-  max-width: 32rem;
-}
-
-.max-w-4xl {
-  max-width: 56rem;
+.min-w-full {
+  min-width: 100%;
 }
 
 .max-w-6xl {
@@ -996,6 +957,12 @@ body {
 .rotate-180 {
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.appearance-none {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 .grid-flow-row {
@@ -1024,10 +991,6 @@ body {
 
 .justify-between {
   justify-content: space-between;
-}
-
-.justify-stretch {
-  justify-content: stretch;
 }
 
 .gap-1 {
@@ -1066,48 +1029,56 @@ body {
   gap: 1.25rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-6 {
   gap: 1.5rem;
 }
 
-.gap-10 {
-  gap: 2.5rem;
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-7 {
+  gap: 1.75rem;
 }
 
 .gap-y-2 {
   row-gap: 0.5rem;
 }
 
+.gap-y-8 {
+  row-gap: 2rem;
+}
+
 .gap-y-\[7px\] {
   row-gap: 7px;
 }
 
-.gap-y-1 {
-  row-gap: 0.25rem;
+.gap-x-6 {
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
 }
 
-.gap-y-4 {
-  row-gap: 1rem;
+.gap-x-5 {
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
 }
 
-.gap-y-10 {
-  row-gap: 2.5rem;
+.gap-x-2 {
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
 }
 
-.gap-y-8 {
-  row-gap: 2rem;
+.gap-x-3 {
+  -moz-column-gap: 0.75rem;
+       column-gap: 0.75rem;
 }
 
 .rounded-md {
   border-radius: 0.375rem;
 }
 
-.rounded-sm {
-  border-radius: 0.125rem;
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -1116,11 +1087,6 @@ body {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border-x {
-  border-left-width: 1px;
-  border-right-width: 1px;
 }
 
 .border-y-2 {
@@ -1192,6 +1158,25 @@ body {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
+.bg-\[\#C5000D\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(197 0 13 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#D80000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(216 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#70C05B\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(112 192 91 / var(--tw-bg-opacity));
+}
+
 .bg-gradient-to-t {
   background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
@@ -1214,6 +1199,10 @@ body {
   padding: 1rem;
 }
 
+.p-7 {
+  padding: 1.75rem;
+}
+
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -1234,6 +1223,21 @@ body {
   padding-right: 1.25rem;
 }
 
+.px-7 {
+  padding-left: 1.75rem;
+  padding-right: 1.75rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -1242,6 +1246,11 @@ body {
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .py-5 {
@@ -1264,34 +1273,14 @@ body {
   padding-right: 0.5rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .px-6 {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
 
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
-}
-
-.px-9 {
-  padding-left: 2.25rem;
-  padding-right: 2.25rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 .pl-4 {
@@ -1302,12 +1291,24 @@ body {
   padding-right: 185px;
 }
 
+.pr-3 {
+  padding-right: 0.75rem;
+}
+
+.pr-7 {
+  padding-right: 1.75rem;
+}
+
 .text-center {
   text-align: center;
 }
 
 .text-right {
   text-align: right;
+}
+
+.text-justify {
+  text-align: justify;
 }
 
 .text-2xl {
@@ -1335,11 +1336,6 @@ body {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 
 .text-5xl {
@@ -1412,29 +1408,26 @@ body {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-red-800 {
+.text-\[\] {
+  color: ;
+}
+
+.text-\[\#\] {
+  color: #;
+}
+
+.text-\[\#665C5C\] {
   --tw-text-opacity: 1;
-  color: rgb(153 27 27 / var(--tw-text-opacity));
+  color: rgb(102 92 92 / var(--tw-text-opacity));
 }
 
-.opacity-5 {
-  opacity: 0.05;
-}
-
-.opacity-10 {
-  opacity: 0.1;
-}
-
-.opacity-100 {
-  opacity: 1;
+.text-\[\#515151\] {
+  --tw-text-opacity: 1;
+  color: rgb(81 81 81 / var(--tw-text-opacity));
 }
 
 .opacity-25 {
   opacity: 0.25;
-}
-
-.opacity-30 {
-  opacity: 0.3;
 }
 
 .mix-blend-multiply {
@@ -1444,12 +1437,6 @@ body {
 .shadow-md {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-sm {
-  --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1517,10 +1504,6 @@ body {
     gap: 1rem;
   }
 
-  .lg\:pr-\[130px\] {
-    padding-right: 130px;
-  }
-
   .lg\:pr-32 {
     padding-right: 8rem;
   }
@@ -1533,10 +1516,6 @@ body {
 
   .md\:block {
     display: block;
-  }
-
-  .md\:flex {
-    display: flex;
   }
 
   .md\:hidden {
@@ -1579,10 +1558,6 @@ body {
 
   .sm\:h-\[170px\] {
     height: 170px;
-  }
-
-  .sm\:w-\[325px\] {
-    width: 325px;
   }
 
   .sm\:w-80 {
